--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "dependencies": {
     "@ant-design/icons": "5.3.7",
     "antd": "5.18.1",
     "axios": "1.7.2",
+    "gh-pages": "^6.3.0",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
